@@ -370,8 +370,10 @@ The flow hardware offload is disabled by default and can be enabled by::
 
     $ ovs-vsctl set Open_vSwitch . other_config:hw-offload=true
 
-So far only partial flow offload is implemented. Moreover, it only works
-with PMD drivers have the rte_flow action "MARK + RSS" support.
+Matches and actions are programmed into HW to achieve full offload of
+the flow. If not all actions are supported, fallback to partial flow
+offload (offloading matches only). Moreover, it only works with PMD
+drivers that have the relevant rte_flow actions support.
 
 The validated NICs are:
 
@@ -380,7 +382,7 @@ The validated NICs are:
 
 Supported protocols for hardware offload are:
 - L2: Ethernet, VLAN
-- L3: IPv4, IPv6
+- L3: IPv4
 - L4: TCP, UDP, SCTP, ICMP
 
 Further Reading
