@@ -26,6 +26,7 @@ Post-v2.12.0
        releases.
      * OVS validated with DPDK 18.11.5, due to the inclusion of a fix for
        CVE-2019-14818, this DPDK version is strongly recommended to be used.
+     * Add hardware offload support for output actions (experimental).
 
 v2.12.0 - 03 Sep 2019
 ---------------------
